--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .container {
   width: 95%;
   max-width: 700px;
-  height: 90%;
+  max-height: 95%;
   background: #fff;
   border-radius: 14px;
   box-shadow: 0 8px 30px rgba(0,0,0,0.12);
@@ -28,9 +29,8 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  overflow-y: auto;
   position: relative;
-  overflow: hidden;
 }
 
 h1 {
@@ -57,9 +57,9 @@ h1 {
 
 input[type="text"], input[type="password"], input[type="number"] {
   width: calc(45% - 12px);
-  min-width: 200px;
-  padding: 18px;
-  font-size: 20px;
+  min-width: 150px;
+  padding: 16px;
+  font-size: 18px;
   border-radius: 12px;
   border: 2px solid #eee;
   text-align: center;
@@ -67,14 +67,14 @@ input[type="text"], input[type="password"], input[type="number"] {
 }
 
 button {
-  padding: 18px;
-  font-size: 20px;
+  padding: 16px;
+  font-size: 18px;
   font-weight: 700;
   border: none;
   border-radius: 12px;
   cursor: pointer;
   width: calc(50% - 12px);
-  min-width: 200px;
+  min-width: 150px;
   background: #c2185b;
   color: #fff;
 }
@@ -109,7 +109,7 @@ small.note {
   animation: fall linear forwards;
 }
 
-@keyframes fall { to { transform: translateY(100%) rotate(360deg); opacity: 0.9; } }
+@keyframes fall { to { transform: translateY(100%) rotate(360deg); opacity:0.9; } }
 
 @media(max-width:520px){
   input[type="text"], input[type="password"], input[type="number"], button {
