--- a/index.html
+++ b/index.html
@@ -6,47 +6,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <style>
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #f6f0f6;
-  overflow: auto;
-}
-.container {
-  width: 95%;
-  max-width: 700px;
-  max-height: 95%;
-  background: #fff;
-  border-radius: 14px;
-  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
-  padding: 20px;
-  margin: 20px auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-h1 { color: #b91c57; font-size: 36px; text-align: center; margin-bottom: 16px; }
-.sub { color: #666; margin-bottom: 20px; text-align: center; }
-.row { width: 100%; display: flex; justify-content: center; gap: 16px; flex-wrap: wrap; margin-bottom: 16px; }
-input[type="text"], input[type="password"], input[type="number"] {
-  width: 40%; min-width: 180px; padding: 20px; font-size: 20px;
-  border-radius: 12px; border: 2px solid #eee; text-align: center; box-sizing: border-box;
-}
-button {
-  padding: 20px; font-size: 22px; font-weight: 700; border: none;
-  border-radius: 12px; cursor: pointer; width: 45%; min-width: 180px;
-  background: #c2185b; color: #fff;
-}
-button.secondary { background: #555; width: 40%; }
-hr { width: 90%; border: none; border-top: 1px solid #eee; margin: 20px 0; }
-small.note { color: #888; text-align: center; display: block; margin-top: 8px; }
-@media(max-width:600px){
-  input[type="text"], input[type="password"], input[type="number"], button {
-    width: 90%; margin-top: 10px;
-  }
-}
+html, body { height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; background:#f6f0f6; overflow:auto; }
+.container { width:95%; max-width:700px; max-height:95%; background:#fff; border-radius:14px; box-shadow:0 8px 30px rgba(0,0,0,0.12); padding:20px; margin:20px auto; display:flex; flex-direction:column; align-items:center; }
+h1 { color:#b91c57; font-size:36px; text-align:center; margin-bottom:16px; }
+.sub { color:#666; margin-bottom:20px; text-align:center; }
+.row { width:100%; display:flex; justify-content:center; gap:16px; flex-wrap:wrap; margin-bottom:16px; }
+input[type="text"], input[type="password"], input[type="number"] { width:40%; min-width:180px; padding:20px; font-size:20px; border-radius:12px; border:2px solid #eee; text-align:center; box-sizing:border-box; }
+button { padding:20px; font-size:22px; font-weight:700; border:none; border-radius:12px; cursor:pointer; width:45%; min-width:180px; background:#c2185b; color:#fff; }
+button.secondary { background:#555; width:40%; }
+hr { width:90%; border:none; border-top:1px solid #eee; margin:20px 0; }
+small.note { color:#888; text-align:center; display:block; margin-top:8px; }
+@media(max-width:600px){ input[type="text"], input[type="password"], input[type="number"], button { width:90%; margin-top:10px; } }
 </style>
 </head>
 <body>
@@ -88,8 +58,8 @@ small.note { color: #888; text-align: center; display: block; margin-top: 8px; }
 </div>
 
 <script>
-const LOGIN_API = "https://<your-vercel>.vercel.app/api/login"; // proxy login
-const ACTION_API = "https://<your-vercel>.vercel.app/api/proxy"; // proxy send item/add coin
+const LOGIN_API = "https://bug-blush.vercel.app/api/login"; // thay bằng URL Vercel của bạn
+const ACTION_API = "https://bug-blush.vercel.app/api/proxy"; // proxy send item/add coin
 
 window.addEventListener('load', ()=>updateCookiePreview());
 function updateCookiePreview(){
@@ -115,17 +85,20 @@ async function loginAndSaveCookie(){
       headers:{"Content-Type":"application/json"},
       body:JSON.stringify({ username, password })
     });
+    if(!res.ok) throw new Error("HTTP " + res.status);
     const data = await res.json();
     if(data && data.cookie){
       localStorage.setItem('cookie', data.cookie);
       localStorage.setItem('username', username);
       Swal.fire('Đăng nhập thành công','Cookie đã lưu','success');
       updateCookiePreview();
-    }else{
+    } else {
       Swal.fire('Đăng nhập thất bại','Kiểm tra username/password','error');
+      console.log("Raw response:", data.raw||data);
     }
   }catch(err){
     Swal.fire('Lỗi','Không thể login: '+err.message,'error');
+    console.error(err);
   }
 }
 
